# Schreddit

./: .gitignore  README.md  azure-pipelines.yml  backend-azure-pipelines.yml  package-lock.json
backend/: .flake8  Dockerfile  pyproject.toml
backend/app/: config.py  dot_env_example  main.py  sessions.py
backend/app/api/: dependencies.py  deps.py
backend/app/api/api_v1/: exceptions.py  main.py
backend/app/core/: config.py  security.py
backend/app/crud/: __init__.py  base.py  base_mongo.py  base_neo.py  base_redis.py  crud_comment_content.py  crud_comment_meta.py  crud_post.py  crud_post_content.py  crud_post_meta.py  crud_subreddit.py  crud_thing_content.py  crud_thing_meta.py  crud_user.py  cypher.py  post.py  user.py
backend/app/db/: init_db.py
backend/app/models/: __init__.py  base.py  comment.py  comment_content.py  comment_meta.py  post.py  post_content.py  post_meta.py  relationships.py  subreddit.py  thing.py  user.py
backend/app/schemas/: __init__.py  base.py  comment.py  comment_content.py  comment_meta.py  post.py  post_content.py  post_meta.py  subreddit.py  thing.py  thing_content.py  thing_meta.py  user.py
backend/app/sessions/: init_db.py
backend/app/tests/: conftest.py
backend/app/tests/crud/: test_comment.py  test_post.py  test_subreddit.py  test_thing.py  test_user.py
backend/app/tests/fixtures/: fake_db.py  fake_schemas.py  fixtures_db.py
backend/app/tests/utils/: fake_payloads.py  fake_schemas.py  user.py
backend/scripts/: dummy_data.py  format.bat  lint.bat  lint.sh  test.bat  test.sh
backend/scripts/linux/: format.sh
(+60 files in other folders)
