[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.1"
uvicorn = "^0.13.4"
neomodel = "^4.0.2"
pydantic = {extras = ["dotenv", "email"], version = "^1.8.2"}
redis = "^3.5.3"
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"
mongoengine = "^0.23.1"
azure-storage-blob= "^12.9.0"
azure-core= "^1.18.0"
python-magic = "^0.4.24"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
requests = "^2.25.1"
flake8 = "^3.9.2"
isort = "^5.8.0"
black = "^21.5b1"
autoflake = "^1.4"
pytest-cov = "^2.12.0"
Faker = "^8.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
